--- a/doc/hexdoc.toml
+++ b/doc/hexdoc.toml
@@ -19,7 +19,6 @@ export_dir = "src/hexdoc_hextrace/_export/generated"
 icon = "{$_common.src}/main/resources/assets/hextrace/icon.png"
 include = [
     "hextrace",
-    "hexcasting",
     "hexdoc",
 ]
 
@@ -28,9 +27,11 @@ mod_name = "Hex Trace"
 author = "DucklingVivi"
 show_landing_text = false
 
+
 # NOTE: "!Raw" means "don't apply variable interpolation to this value"
 _pattern_regex = { "!Raw"='make\("(?P<name>[^"]+)",\s*HexDir\.(?P<startdir>\w+),\s*"(?P<signature>[qweasd]+)"' }
 
+#[[extra.hexcasting.pattern_stubs]]
 #path = "{$_common.kotlin}/registry/HextraceActions.kt"
 #regex = "{^_pattern_regex}"
 
