--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # non-minecraft values
-org.gradle.jvmargs=-Xmx4096M -mixin.dumpTargetOnFailure -mixin.debug.verbose
+org.gradle.jvmargs=-Xmx4096M
 jetbrainsAnnotationsVersion=23.0.0
 
 # gradle kotlin jvm plugin breaks without this
