Add 'forge' to modloader options in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,6 +74,7 @@ jobs:
           - client
         modloader:
           - fabric
+          - forge
         include:
           - modloader: fabric
             mc-runtime-test: fabric
